tdf#152839 add fill cells to tables imported wrongly from RTF

In Word 'invisible' cells at the end of the row are usually marked
with \trwWidthAN. If that information is missing the table needs to
get addtional cells to smaller rows. This prevents extension of
exisition cell to the full width of the table.

Change-Id: I064f3da55665302d8198ed44d9f640a7707c34e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174385
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175553
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>